bugfix jakis